# yarp-platform

./: README.txt
contact/doc/advanced-babbling/: ContactProject.cls  Makefile  lexicon.tex  main.bib  main.tex  sampa_it.tex  section-flag.tex  section-index.tex
contact/doc/exploratory-play/: Makefile  amodal-babble.tex  main.bib  main.tex  manipulation.tex  section-flag.tex  section-index.tex  singing.tex
contact/gnuspeech/: README.TXT
contact/linguometer/click_segment/: main.cpp  (+1 more)
contact/linguometer/lmtools/: CMakeLists.txt  README
contact/linguometer/lmtools/config/: Makefile.cflags  Makefile.in
contact/linguometer/lmtools/include/: mClass.h  mContainer.h  mInclude.h  mObjectDV.h  mObjectEncoder.h  mObjectIMG.h  mObjectPCM.h  mObjectScroller.h
contact/linguometer/lmtools/src/mProcessDV/: Makefile  main.cpp
contact/linguometer/lmtools/src/mWords/: Makefile  main.cpp  mwords_dh
contact/linguometer/track_tongue/: CMakeLists.txt  Finder.cpp  Finder.h  GlutOrientation.cpp  IntegralImage.cpp  MouthFinder.cpp  MouthFinder.h  TongueFinder.cpp  TongueFinder.h  YARPViterbi.cpp  YARPViterbi.h  apply.sh  apply2.sh  config.ini  main.cpp  main_mouth.cpp  main_tongue.cpp  math_tongue.sh  merger.sh  smooth_tongue.m  summarize_tongue.m
contact/linguometer/track_tongue/yarp/sig/: GlutOrientation.h  IntegralImage.h
mirror/mirrorCapture/: CMakeLists.txt  main.cpp  mirrorCapture.conf  mirrorCapture.glade
mirror/mirrorCollector/: CMakeLists.txt  CollectorCommands.h  fakes.h  main.cpp  mirrorCollector.conf
mirror/scripts/: mirrorCaptureConnect.js  mirrorCaptureRun.js
(+687 files in other folders)
